--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h2>Javascript practice</h2>
-        <div class="row">
+        <div class="row" id='fruits'>
             
 <!--                 <div class="card col">
                     <img class="card-img-top" style="height: 300px" src="https://lifeglobe.net/x/entry/6259/1a-0.jpg">
@@ -58,6 +58,7 @@
 
     <!-- посередине - создаваемые плагины -->
     <script src="plugins/modal.js"></script>
+    <script src="plugins/confirm.js"></script>
     <script src="templates.js"></script>
     <!-- здесь вся разработка, вызываем через доллар из первого файла, чтобы видно было что это плагин -->
     <script src="index.js"></script>
